# mlcppl

./: CMakeLists.txt  README  README.in  README.md  conf.hh  mlcppl.hh
include/: _dirent.hh  misc.hh  output.hh  string.hh  util.hh
src/: _dirent.cc  output.cc  string.cc  util.cc
test/: _direnttest.cc  misctest.cc  utiltest1.cc
